[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saife-gym"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
"numpy>=1.24,<3",
"gymnasium>=1.2,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SAiFE_gym*"]
namespaces = true